name:               arow-info-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            MIT
license-file:       LICENSE

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
